# incubator-teaclave

./: .asf.yaml  .bulldozer.yml  .dockerignore  .drone.yml  .editor_config  .gitattributes  .gitignore  .gitmodules  .licenserc.yaml  .rustfmt.toml  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER  DISCLAIMER-WIP  Dockerfile  KEYS  LICENSE  MAINTAINERS.md  Makefile  Makefile.deprecated  NOTICE  README.md  SECURITY.md  build.toml  config.toml  environment  environment.deprecated  ide.sh  service.sh  website-toc.md
attestation/: Cargo.toml  README.md
attestation/src/: attestation.rs  cert.rs  ias.rs  key.rs  lib.rs  platform.rs  quote.rs  report.rs  rpc.rs  service.rs  verifier.rs
attestation/src/platform/: mod.rs  sgx.rs
attestation/src/platform/libos/: mod.rs  occlum.rs
binder/: Cargo.toml  Enclave.edl  README.md  build.rs
binder/attribute/: Cargo.toml
binder/src/: binder.rs  error.rs  lib.rs  macros.rs  ocall.rs  proto.rs
binder/src/ipc/: app.rs  enclave.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
common/mayfail/: Cargo.toml
common/protected_fs_rs/: Cargo.toml  README.md  build.rs
common/protected_fs_rs/protected_fs_c/: CMakeLists.txt  README.md  build.sh  sgx_tprotected_fs.edl
common/protected_fs_rs/protected_fs_c/example/: example.c
common/protected_fs_rs/protected_fs_c/inc/: non_sgx_protected_fs.h
common/protected_fs_rs/protected_fs_c/sgx_tprotected_fs/: CMakeLists.txt  file_crypto.cpp  file_other.cpp  lru_cache.cpp  non_sgx_protected_fs.cpp  protected_fs_file.h  protected_fs_nodes.h  sgx_tprotected_fs_t.h
common/protected_fs_rs/protected_fs_c/sgx_uprotected_fs/: sgx_uprotected_fs.cpp
common/protected_fs_rs/src/: deps.rs  lib.rs  protected_fs.rs  sgx_fs_inner.rs  sgx_tprotected_fs.rs
common/protected_fs_rs/tests/: large_file.rs  rename.rs
common/rusty_leveldb_sgx/: Cargo.toml  README.md
common/rusty_leveldb_sgx/src/: block.rs  block_builder.rs  blockhandle.rs  cache.rs  cmp.rs  db_impl.rs  db_iter.rs  disk_env.rs  env.rs  env_common.rs  error.rs  filter.rs  filter_block.rs  infolog.rs  key_types.rs  lib.rs  log.rs  mem_env.rs  memtable.rs  merging_iter.rs  options.rs  skipmap.rs  snapshot.rs  table_block.rs  table_builder.rs  table_cache.rs  table_reader.rs  test_util.rs  types.rs  version.rs  version_edit.rs  version_set.rs  write_batch.rs
common/service_config/: Cargo.toml
common/service_config/src/: external.rs  lib.rs
common/service_sgx_utils/: Cargo.toml
common/service_sgx_utils/proc_macro/src/: lib.rs
common/service_sgx_utils/src/: lib.rs
config/: Cargo.toml  README.md  build.config.toml  build.rs  runtime.config.toml
config/config_gen/: Cargo.toml  main.rs
config/config_gen/templates/: config.j2
config/keys/: dcap_root_ca_cert.pem
config/src/: build.rs  lib.rs  runtime.rs
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs
dcap/: Cargo.toml  README.md  Rocket.toml
dcap/src/: main.rs
executor/: Cargo.toml  README.md
executor/context/: Cargo.toml
executor/context/src/: context.rs  lib.rs
executor/src/: builtin.rs  context.rs  lib.rs  mesapy.rs  wamr.rs
file_agent/: Cargo.toml  README.md
file_agent/src/: agent.rs  lib.rs
function/: Cargo.toml  README.md
function/src/: context.rs  echo.rs  face_detection.rs  gbdt_predict.rs  gbdt_prediction.rs  gbdt_train.rs  gbdt_training.rs  lib.rs  logistic_regression_predict.rs  logistic_regression_prediction.rs  logistic_regression_train.rs  logistic_regression_training.rs  mesapy.rs  online_decrypt.rs  ordered_set_intersect.rs  ordered_set_join.rs  password_check.rs  policy_enforcement.rs  principal_components_analysis.rs  private_join_and_compute.rs  rsa.rs  rsa_sign.rs  rustface_detector.rs
function/src/psi/: basic.rs  compute.rs  mod.rs
ipc/: Cargo.toml
ipc/attribute/: Cargo.toml
ipc/src/: lib.rs  macros.rs  proto.rs
ipc/src/channel/: app_dep.rs  mod.rs  tee_dep.rs
ipc/src/protos/: command.rs  ecall.rs  mod.rs
mesatee_binder/: Cargo.toml  Enclave.edl  build.rs
mesatee_binder/src/: binder.rs  lib.rs  ocall.rs
mesatee_cli/: Cargo.toml  README.md
mesatee_cli/src/: main.rs
mesatee_config/: Cargo.toml  build.rs
mesatee_config/config_gen/: Cargo.toml
mesatee_config/config_gen/src/: main.rs
mesatee_config/src/: build_config.rs  lib.rs  runtime_config.rs
mesatee_core/: Cargo.toml  build.rs
mesatee_core/ipc_attribute/: Cargo.toml
mesatee_core/ipc_attribute/src/: lib.rs
mesatee_core/src/: db.rs  error.rs  lib.rs  prelude.rs  utils.rs
mesatee_core/src/config/: external.rs  internal.rs  mod.rs
mesatee_core/src/ipc/: macros.rs  mod.rs  sgx.rs
mesatee_core/src/ipc/channel/: app_dep.rs  mod.rs  (+1 more)
mesatee_core/src/rpc/: channel.rs  mod.rs  sendrecv.rs  server.rs
mesatee_sdk/: Cargo.toml
mesatee_sdk/c_sdk/: Cargo.toml
mesatee_sdk/c_sdk/src/: auditor_set.rs  context.rs  enclave_info.rs  lib.rs  task.rs
mesatee_sdk/src/: lib.rs
rpc/: Cargo.toml  README.md
rpc/proc_macro/: Cargo.toml
rpc/proc_macro/src/: lib.rs
rpc/src/: channel.rs  config.rs  endpoint.rs  interceptor.rs  lib.rs  macros.rs  protocol.rs  request.rs  server.rs  transport.rs  utils.rs
runtime/: Cargo.toml  README.md
runtime/src/: default.rs  lib.rs  raw_io.rs
teaclave_config/: Cargo.toml  build.config.toml  build.rs  runtime.config.toml
teaclave_config/config_gen/: main.rs
teaclave_config/src/: lib.rs
teaclave_ra/: Cargo.toml
teaclave_ra/src/: ias.rs  key.rs  lib.rs  quote.rs  ra.rs
teaclave_rpc/: Cargo.toml
teaclave_rpc/src/: channel.rs  lib.rs  protocol.rs  server.rs  transport.rs
types/: Cargo.toml  README.md
types/src/: attestation.rs  audit.rs  crypto.rs  error.rs  file.rs  file_agent.rs  function.rs  lib.rs  macros.rs  staged_file.rs  staged_function.rs  staged_task.rs  storage.rs  task.rs  task_state.rs  unittest.rs  user.rs  worker.rs
worker/: Cargo.toml  README.md
worker/src/: lib.rs  worker.rs
worker/src/function/: context.rs  echo.rs  gbdt_prediction.rs  gbdt_training.rs  mesapy.rs  mod.rs
worker/src/runtime/: default.rs  mod.rs  raw.rs  raw_io.rs
(+1211 files in other folders)
