[package]
name = "teaclave_attestation"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Provides TLS-based remote attestation mechanism in Teaclave."
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = [
    "sgx_tstd",
    "sgx_tcrypto",
    "sgx_rand",
    "sgx_tse",
    "teaclave_types/mesalock_sgx",
    "teaclave_config/mesalock_sgx",
    "teaclave_config/build_config",
]
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
anyhow           = { version = "1.0.26" }
base64           = { version = "0.13.0" }
bit-vec          = { version = "0.6.1", default-features = false }
cfg-if           = { version = "0.1.9" }
chrono           = { version = "0.4.6" }
hex              = { version = "0.4.0" }
httparse         = { version = "1.3.2", default-features = false }
log              = { version = "0.4.6", features = ["release_max_level_info"] }
num-bigint       = { version = "0.2.2" }
percent-encoding = { version = "2.1.0" }
rustls           = { version = "0.16.0", features = ["dangerous_configuration"] }
serde            = { version = "1.0.92", features = ["derive"] }
serde_json       = { version = "1.0.39" }
thiserror        = { version = "1.0.9" }
url              = { version = "2.1.1" }
uuid             = { version = "0.8.1", features = ["v4"] }
webpki           = { version = "0.21.0" }
webpki-roots     = { version = "0.21.0" }
yasna            = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }

teaclave_types  = { path = "../types" }
teaclave_config = { path = "../config" }
teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_rand    = { version = "1.1.3", optional = true }
sgx_tcrypto = { version = "1.1.3", optional = true }
sgx_tse     = { version = "1.1.3", optional = true }
sgx_tstd    = { version = "1.1.3", features = ["net", "backtrace"], optional = true }
sgx_types   = { version = "1.1.3" }
