[package]
name = "teaclave_binder"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Abstract communication interfaces between TEE untrusted/trusted worlds."
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_binder"
path = "src/lib.rs"

[features]
default = []

[dependencies]
sgx_types = "1.1.0"
sgx_urts = "1.1.0"
log = { version = "0.4.6" }
env_logger = "0.7.1"
anyhow       = { version = "1.0.26" }

serde        = "1.0.92"
serde_derive = "1.0.92"
serde_json   = "1.0.39"
teaclave_ipc = { path = "../ipc" }
