[package]
name = "teaclave_binder"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Abstract communication interfaces between TEE untrusted/trusted worlds."
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow       = { version = "1.0.26" }
env_logger   = { version = "0.7.1" }
log          = { version = "0.4.6" }
serde        = { version = "1.0.92", features = ["derive"] }
serde_json   = { version = "1.0.39" }

teaclave_ipc = { path = "../ipc" }

sgx_types = { version = "1.1.0" }
sgx_urts  = { version = "1.1.0", features = ["global_init"] }
