[package]
name = "teaclave_binder"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Abstract communication interfaces between TEE untrusted/trusted worlds."
license = "Apache-2.0"
edition = "2018"

[features]
default = []
app = ["sgx_urts"]
mesalock_sgx = [
    "sgx_tstd",
    "teaclave_binder_attribute",
    "teaclave_types/mesalock_sgx",
    "teaclave_config/mesalock_sgx",
]
enclave_unit_test = []
app_unit_test = []

[dependencies]
cfg-if     = { version = "0.1.9" }
anyhow       = { version = "1.0.26" }
env_logger   = { version = "0.7.1" }
log          = { version = "0.4.6", features = ["release_max_level_info"] }
serde        = { version = "1.0.92", features = ["derive"] }
serde_json   = { version = "1.0.39" }
thiserror    = { version = "1.0.9" }
url          = { version = "2.1.1" }

teaclave_types = { path = "../types" }
teaclave_config = { path = "../config" }
teaclave_binder_attribute = { path = "./attribute", optional = true }

sgx_types = { version = "1.1.3" }
sgx_urts  = { version = "1.1.3", features = ["global_init"], optional = true }
sgx_tstd  = { version = "1.1.3", features = ["net", "backtrace"], optional = true }
