[package]
name = "teaclave_cli"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave command line tool"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.26" }
structopt = "0.2"
protected_fs_rs = { path = "../common/protected_fs_rs" }
hex = { version = "0.4.0" }
