[package]
name = "teaclave_cli"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave command line tool"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.26" }
structopt = "0.3"
teaclave_crypto = { path = "../crypto" }
hex = { version = "0.4.0" }
teaclave_types = { path = "../types" }
teaclave_attestation = { path = "../attestation" }
env_logger = { version = "0.7.1" }
webpki-roots     = { version = "0.21.0" }
webpki     = { version = "0.21.0" }
rustls     = { version = "0.16.0", features = ["dangerous_configuration"] }
http       = { version = "0.2" }
pem = "0.7.0"
