# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "teaclave_cli"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave command line tool"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.26" }
structopt = "0.3"
teaclave_crypto = { path = "../crypto" }
hex = { version = "0.4.0" }
teaclave_types = { path = "../types" }
teaclave_attestation = { path = "../attestation" }
env_logger = { version = "0.7.1" }
webpki-roots     = { version = "0.21.0" }
webpki     = { version = "0.21.0" }
rustls     = { version = "0.16.0", features = ["dangerous_configuration"] }
http       = { version = "0.2" }
pem = "0.7.0"
