[package]
name = "teaclave_config"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Build and runtime configurations."
license = "Apache-2.0"
edition = "2018"

[features]
default = []
mesalock_sgx = ["sgx_tstd"]

[dependencies]
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
log          = { version = "0.4.6" }
serde        = { version = "1.0.93" }
serde_derive = { version = "1.0.93" }
toml         = { version = "0.5.1" }

sgx_tstd = { version = "1.1.0", optional = true }
