# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "teaclave_crypto"
version = "0.2.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
description = "Teaclave crypto"
license = "Apache-2.0"
edition = "2018"

[features]
default = [
    "protected_fs_rs/default",
]
mesalock_sgx = [
    "sgx_tstd",
    "protected_fs_rs/mesalock_sgx",
]
enclave_unit_test = ["teaclave_test_utils/mesalock_sgx"]

[dependencies]
protected_fs_rs  = { path = "../common/protected_fs_rs", default-features = false}

anyhow       = { version = "1.0.26" }
rand         = { version = "0.7.0" }
serde        = { version = "1.0.92", features = ["derive"] }
serde_json   = { version = "1.0.39" }
ring         = { version = "0.16.5" }
hex          = { version = "0.4.0" }

teaclave_test_utils = { path = "../tests/utils", optional = true }

sgx_tstd = { version = "1.1.3", features = ["net", "backtrace"], optional = true }
